--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    device-width, initial-scale=1.0">
     <title>jaff | github</title>
-</head>
+    <style>
+        h1{
+            color: darkcyan;
+            background-color: blueviolet;
+        }
+    </style>
 <body>
     <h1> Welcome to sharanbasva university</h1>
     <img src="image.png" alt="" width="80%">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque architecto nemo porro dignissimos nostrum fuga reiciendis accusamus quis doloremque eius! Quidem rem consequuntur libero sunt repellat itaque voluptatum tenetur ratione.
-        
+
     </p>
     
 </body>
