--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         h1{
             color: darkcyan;
             background-color: blueviolet;
+            padding: 20px;
         }
     </style>
 <body>
