--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque architecto nemo porro dignissimos nostrum fuga reiciendis accusamus quis doloremque eius! Quidem rem consequuntur libero sunt repellat itaque voluptatum tenetur ratione.
 
     </p>
+    <style>
+        p1{
+            color: red;
+        }
+    </style>
     
 </body>
 </html>
