--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <style>
         p1{
             color: red;
+            background-color: darkgreen;
+            padding: 20px;
+
         }
     </style>
     
